@@ -2,6 +2,8 @@ ChangeLog for pommed
 --------------------
 
 version 1.16:
+	- pommed: add support for the MacBookPro4,1; USB IDs need to be
+	confirmed.
 
 version 1.15:
 	- pommed: add preliminary support for the MacBook Air1,1; USB IDs
